# terminal

./: .env.example  AGENT_SETUP.md  Cargo.toml  IMPLEMENTATION_PLAN.md  README.md  SKILL.md  Taskfile.yml  pyproject.toml
.github/workflows/: browser-use-core-publish.yml  browser-use-core-wheels.yml  browser-use-rust-wheels.yml
crates/browser-use-agent/: Cargo.toml
crates/browser-use-browser/: Cargo.toml
crates/browser-use-cli/: Cargo.toml
crates/browser-use-llm/: Cargo.toml
crates/browser-use-runtime/: Cargo.toml
crates/browser-use-secrets/: Cargo.toml
crates/browser-use-secrets/src/: lib.rs  totp.rs
crates/browser-use-tui/: Cargo.toml
docs/: STATUS.md  agent-alignment-overview.md  agent-gap-log.md  assistant-plugins.md  browser-harness-parity-plan.md  browser-interaction-redesign.md  completion-audit.md  goal-completion-audit.md  overnight-experiment-human-report.html  overnight-experiment-loop.md  overnight-experiment-report.md  public-launch-checklist.md  renderer-v2-complete-build-plan.md  rewrite-verification.md  session-chat-rendering.html
docs/agent-design/: live-runtime-inversion-checklist.md  (+1 more)
prompts/: browser-agent-system.md  browser-script-tool-description.md  browser-tool-description.md  dataset-case-user.md  python-tool-description.md
scripts/: browser-parity-snapshot.py  build-browser-use-core-wheel.sh  build-browser-use-rust-wheel.sh  install-agent-ripgrep.sh  tui-terminal-smoke.py
tests/: test_agent_loop.py  test_browser_runtime.py  test_event_spine.py  test_python_browser_tool.py  test_shell_file_tools.py
(+124 files in other folders)
